--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,15 @@ on:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+      - name: java version
+        run: java -version
+      - name: maven version
+        run: maven --version
+      - name: python version
+        run: python --version
+      - name: docker version
+        run: docker -v
+      - name: terraform version
+        run: terraform --version  
+          
+          
