--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-  fork:
+  jobs:
   # This workflow contains a single job called "build"
-  public:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
